# m1

./: .gitignore  README.md  pyproject.toml  run_tests.bat  zoo-project.json
docs/raw/: 001__philosophy.json  002__spec.json  003__semantic-examination.json  004__status.json  005__conversations.txt  006__python-api.txt  007__transport-spec.json  020__spec.json  021__transport-spec.json  022__link-types.json  023__merging-guide.json  024__runtime-model-notes_2026-05-05.txt  025__runtime-spec.json  026__runtime-manual.md  030__m1lattice-spec-core-v3.json  031__m1lattice-spec-transport-v3.json
src/m1/: __init__.py  browser.py  claimspace.py  runtime.py
testdata/: 001__people-and-languages.m1  002__programs-and-links.m1  003__todos.m1  README.txt
tests/: test_claimspace.py
